using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Jellies.src.cells;

public enum CellTypes
{
    Hole = 0,
    Floor = 1,
    Wall = 2,
    Conveyor = 3,
}

public class Cell
{

}
